<resources>
    <string name="app_name">Ledger Diary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="add_group_entry">Add Group Entry</string>
    <string name="add_customer">Add Customer</string>
    <string name="add">Add</string>

</resources>