<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/toolbarc"
        app:title="Ledger Diary"
        app:titleTextColor="@color/white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/frontbar"
        android:weightSum="3"
        android:layout_below="@+id/toolbar"
        android:background="@color/toolbarc">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="You Will Give"
                android:gravity="center"
                android:textColor="@color/grey"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/onlinegive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/dot"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:padding="5dp"/>
        </LinearLayout>
        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="75dp"
            android:background="@color/white"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="1dp" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Balance"
                android:gravity="center"
                android:textColor="@color/grey"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/dashboardtotalonline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textStyle="bold"
                android:drawablePadding="5dp"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:padding="5dp"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="75dp"
            android:background="@color/white"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="1dp" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="You Will Got"
                android:gravity="center"
                android:textColor="@color/grey"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/onlinerecive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textStyle="bold"
                android:drawablePadding="5dp"
                android:textSize="18sp"
                android:drawableLeft="@drawable/dot"
                android:drawableTint="@color/gradcolor1"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:padding="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frontbar"
        android:layout_marginTop="-20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/cardview"
        app:cardCornerRadius="20dp"
        >
       <com.google.android.material.tabs.TabLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/tablayout"
           android:background="#D8DADC"
           app:tabIndicatorColor="@color/white"
           app:tabTextColor="@color/black"
           app:tabSelectedTextColor="@color/white"
           android:elevation="12dp"/>

    </androidx.cardview.widget.CardView>
    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frontbar"
        android:layout_marginTop="32dp"
        android:id="@+id/viewpage" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addentry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#7084F6"
                android:src="@drawable/baseline_add_24"
                android:tint="@color/white"
                android:contentDescription="@string/add"
                app:fabCustomSize="66dp"
                app:maxImageSize="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="23dp"/>

            <LinearLayout
                android:id="@+id/button_container"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/addentry"
                app:layout_constraintEnd_toEndOf="@id/addentry"
                app:layout_constraintStart_toStartOf="@id/addentry"
                app:layout_constraintTop_toTopOf="@id/addentry">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addperson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add_customer"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/grey"
                    android:visibility="gone"
                    android:src="@drawable/ic_baseline_person_add_24"
                    app:fabSize="mini" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addgroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add_group_entry"
                    android:backgroundTint="@color/grey"
                    android:visibility="gone"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/baseline_group_add_24"
                    app:fabCustomSize="50dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/add"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_baseline_settings_24"
                    app:fabSize="mini" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/grey"
                    android:contentDescription="@string/set_reminder"
                    android:visibility="gone"
                    android:src="@drawable/baseline_add_reminder_24"
                    app:fabCustomSize="50dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey"
                    android:visibility="gone"
                    android:contentDescription="@string/setting"
                    android:src="@drawable/ic_baseline_settings_24"
                    app:fabSize="mini" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>





</RelativeLayout>